tests/bad/null_literal.glaz
fn main() {
  let d = null;
  unsafe { let mut x: &i32 = null; }
}
